src/objects/Apttus_Config2__ChargeType__c.object
<CustomObject>
    <description>Represents a type of charge for a product or service.</description>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The charge type description</description>
        <inlineHelpText>The charge type description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Label__c</fullName>
        <description>The charge type label</description>
        <inlineHelpText>The charge type label</inlineHelpText>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Hardware Fee</fullName>
                </value>
                <value>
                    <fullName>Software Fee</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Support Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
                <value>
                    <fullName>NRC</fullName>
                </value>
                <value>
                    <fullName>MRC</fullName>
                </value>
                <value>
                    <fullName>YRC</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Usage Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The charge type display sequence</description>
        <inlineHelpText>The charge type display sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Charge Type</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>